--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "scrum-poker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "scrumpoker",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "start index.html"
+    "dev": "vite",
+    "build": "run-p type-check build-only",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Matheus-Sleutjes/scrum-poker.git"
+  "dependencies": {
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
-  "author": "Matheus Sleutjes",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Matheus-Sleutjes/scrum-poker/issues"
-  },
-  "homepage": "https://github.com/Matheus-Sleutjes/scrum-poker#readme"
+  "devDependencies": {
+    "@types/node": "^18.14.2",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/tsconfig": "^0.1.3",
+    "npm-run-all": "^4.1.5",
+    "typescript": "~4.8.4",
+    "vite": "^4.1.4",
+    "vue-tsc": "^1.2.0"
+  }
 }
