--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "quasar": "^2.11.7",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
